--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,15 +112,13 @@ header nav ul li a:hover {
 .main li{
     list-style-type: none;
 }
-.image{
-    max-height: 100%;
-    min-width: 100%;
-    object-fit: cover;
-}
 .main ul {
     display: flex;
     flex-wrap: wrap;
     justify-content:center;
+}
+.image1 {
+    background-size: cover;
 }
 
 /*Contact me*/
