hover color changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,7 @@ nav ul li a {
         content: "";
         height: 100%;
         width: 100%;
-        background: rgba(235, 85, 52, 0.3);
+        background: rgba(129, 206, 135,0.5);
         position: absolute;
         top: 0;
         left: 0;
